fix visible navbar-link caret in kiosk/timetable part of #433

--- a/client/views/navigation/navbar/_navbar.scss
+++ b/client/views/navigation/navbar/_navbar.scss
@@ -123,3 +123,10 @@
     }
   }
 }
+
+.kiosk,
+.kioskTimetable {
+	.navbar-link > .caret {
+		display: none;
+	}
+}
